[package]
name = "sakura"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
regex = "1.7.0"

[dependencies.clap]
version = "4.0.25"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
